# proving_gobang_public

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  install.sh  run.sh  tutorial.md
include/: PNS.h  artic_point.h  board.h  canonicalorder.h  common.h  common_strategy.h  counter.h  heuristic.h  licit.h  logger.h  node.h  parallel.h  play.h  sides.h
scripts/: find_turning_potential.py  generate_side_rules.py  potential_curve.py  predict.py  predict_heuristic_value.ipynb  process_stats.py  search_start_pos.py
scripts/temp/: analyze.ipynb  analyze.py  checker.py
src/: PNS.cpp  PNS_square.cpp  artic_point.cpp  board.cpp  common.cpp  common_strategy.cpp  counter.cpp  heuristic.cpp  logger.cpp  node.cpp  parallel.cpp  play.cpp  side.cpp
src/unused/: DFPN.cpp  MCTS.cpp  MCTS.h  gobanggame.h  testboard.h  tree.h
test/: PARALLEL.py  PLAY  common_search.sh  dev.cpp  main.cpp  measure.sh  measure_both.sh  nauty.cpp  parallel.sh  test.cpp
